# familiar

./: .gitignore  Cargo.toml
docs/v4/: .env  .env.example  CLEANUP_PLAN.md  Cargo.toml  README.md  docker-compose.yml  drift_report.txt  inject_derives.sh  schemas.dot  test_shortcuts.rs
docs/v4/.cursor/rules/: ast-grep.mdc  familiar-schemas-mcp.mdc
docs/v4/.github/workflows/: ci.yml  schema-analysis.yml  schema-drift.yml
docs/v4/docs/: MIGRATION_QUICK_START.md  ONBOARDING_DAG_ARCHITECTURE.md  PORT_IO_INTEGRATION.md  QUICK_START_PORT.md  SCHEMA_FIRST_ARCHITECTURE.md  SCHEMA_LIBRARY_STRATEGY.md  SCHEMA_MIGRATION_PROJECT.md  UI_WRAPPER_OPTIONS.md  V4_SUMMARY.md  infrastructure.md
docs/v4/familiar-contracts/: Cargo.toml  build.rs
docs/v4/familiar-contracts/src/: generated.artifacts.json  generated.rs  lib.rs  mod.rs
docs/v4/familiar-contracts/src/auth/: mod.rs
docs/v4/familiar-core/: Cargo.toml  build.rs  schema_version.txt  sgconfig.yml
docs/v4/familiar-core/macros/: Cargo.toml
docs/v4/familiar-core/macros/src/: config.rs  lib.rs  node.rs  system.rs  types.rs
docs/v4/familiar-core/pgo/: benchmark.sh  build-pgo.sh
docs/v4/familiar-core/proto/: envelope.proto
docs/v4/familiar-core/rules/: schema-import.yml  schema-reference.yml  schema-usage.yml
docs/v4/familiar-core/src/: context.rs  lib.rs  runtime_config.rs
docs/v4/familiar-core/src/analysis/: ast_grep_runner.rs  communication_analyzer.rs  cross_file.rs  database_analyzer.rs  fixer.rs  issue_kinds.rs  kafka_analyzer.rs  mod.rs  schema_cache.rs  walker.rs  windmill_client.rs
docs/v4/familiar-core/src/config/: course.rs  manifest.rs  mod.rs  models.rs  schema_lock.rs
docs/v4/familiar-core/src/core/: mod.rs
docs/v4/familiar-core/src/entities/: mod.rs
docs/v4/familiar-core/src/impl_/: a_i_provider.rs  active_model.rs  agent_speaker.rs  agent_state.rs  agentic_command.rs  agentic_event.rs  analysis_response.rs  anthropic_conversation.rs  api_error.rs  api_key.rs  api_result.rs  ast_grep_error.rs  ast_grep_runner.rs  async_task_status.rs  auth.rs  binding_pattern.rs  binding_type.rs  block_message.rs  bond_characteristics.rs  channel_type.rs  chat_message.rs  classification_superposition.rs  classified_purpose.rs  cognitive_dimensions.rs  cognitive_optics.rs  command_result.rs  communication_analyzer.rs  communication_summary.rs  consent_type.rs  content_classification_response.rs  content_payload.rs  contract_enforcer.rs  conversation.rs  core_runtime_config.rs  course.rs  course_config.rs  course_message.rs  course_response.rs  course_status.rs  course_summary.rs  (+128 more)
docs/v4/familiar-core/src/infrastructure/: media_store.rs  mod.rs  store_user_fix.txt
docs/v4/familiar-core/src/internal/: auth_inputs.rs  db_types.rs  errors.rs  evaluation.rs  mod.rs  provider_adapters.rs
docs/v4/familiar-core/src/kafka/: mod.rs  proto.rs
docs/v4/familiar-core/src/legacy/: mod.rs
docs/v4/familiar-core/src/mcp/: README.md  graph.rs  mod.rs  tools.rs
docs/v4/familiar-core/src/primitives/: macros.rs  mod.rs  retry_config.rs  settings.rs
docs/v4/familiar-core/src/reports/: mod.rs
docs/v4/familiar-core/src/runtime/: mod.rs  system.rs
docs/v4/familiar-core/src/schemas/: generated_version.rs  graph.rs  mod.rs
docs/v4/familiar-core/src/simulation/: entity_spawn.rs  mod.rs  physics.rs  resolver.rs  spawner.rs
docs/v4/familiar-core/src/validation/: mod.rs
docs/v4/familiar-core/templates/: report.html
docs/v4/familiar-drift-internals/: Cargo.toml
docs/v4/familiar-drift-internals/src/: compare.rs  lib.rs  parser.rs  schema.rs
docs/v4/familiar-primitives/: Cargo.toml
docs/v4/familiar-primitives/src/: lib.rs
docs/v4/reports/: .llm_cache.json  schema_report.html  schema_report.json  schema_report.txt  schemas.dot
docs/v4/scripts/: analyze-schema.sh  analyze_schema.sh  check-banned-patterns.sh  ci-check-generated.sh  dev.sh  export_code_for_llm.sh  init-tigerdata.sql  migrate.sh
docs/v4/services/familiar-api/: .env  Cargo.toml  config.toml
docs/v4/services/familiar-api/src/: config.rs  main.rs  openapi.rs  state.rs
docs/v4/services/familiar-daemon/: Cargo.toml
docs/v4/services/familiar-daemon/src/: config.rs  lib.rs  main.rs  state.rs
docs/v4/services/familiar-ui/: README.md  capacitor.config.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/v4/services/familiar-ui/app/: layout.tsx  page.tsx
docs/v4/services/familiar-ui/hooks/: use-chat.ts  useAsyncTask.ts
docs/v4/services/familiar-ui/stores/: auth-store.ts  chat-store.ts  settings-store.ts
docs/v4/services/familiar-ui/types/: index.ts
docs/v4/services/familiar-ui/utils/: capacitor.ts
docs/v4/services/familiar-worker/: .env  Cargo.toml  config.toml
docs/v4/services/familiar-worker/src/: config.rs  evaluator.rs  lib.rs  main.rs
docs/v4/services/familiar-workflows/: README.md  package-lock.json  package.json  tsconfig.json
docs/v4/services/familiar-workflows/src/: client.ts  worker.ts
docs/v4/services/windmill/: README.md
docs/v4/services/windmill/.archive/: docker-compose.yml.deprecated
docs/v4/services/windmill/flows/: onboarding_accept_invitation.flow.json  onboarding_create_family.flow.json  onboarding_signup.flow.json  schema_analyzer.flow.json
docs/v4/services/windmill/prompts/: entity.md  hints.md  intent.md  segmentation.md  spawn.md
docs/v4/services/windmill/python_requirements/: requirements.txt
docs/v4/xtask/: Cargo.toml
docs/v4/xtask/src/: main.rs  sea_codegen.rs
familiar-architecture/familiar-config/: Cargo.toml  policy_manifest.json
familiar-architecture/familiar-config/config/: defaults.toml
familiar-architecture/familiar-config/src/: config.rs
familiar-architecture/xtask/: Cargo.toml
familiar-architecture/xtask/src/: main.rs
familiar-architecture/xtask/src/graph/: mod.rs
familiar-codegen/: Cargo.toml
familiar-codegen/src/: lib.rs
familiar-contracts/: Cargo.toml
familiar-graph/: Cargo.toml
services/familiar-router/: Cargo.toml
services/familiar-router/src/: context.rs  evaluator.rs  lib.rs  resource_tracker.rs  router.rs  telemetry.rs
xtask/: Cargo.toml
(+738 files in other folders)
