[package]
name = "familiar-codegen"
version = "0.1.0"
edition = "2021"
description = "Schema-driven code generation for Familiar"

[dependencies]
familiar-schemas = { path = "../familiar-schemas/packages/familiar-schemas" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
regex = "1.10"
heck = "0.4"
