[package]
name = "familiar-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime dependencies for the generated code
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
cel-interpreter = "0.4" # For runtime logic evaluation
tracing = "0.1"

# Configuration management
familiar-config = { path = "../familiar-config" }

[build-dependencies]
# The Compiler Logic lives here!
# We reference it by path so changes in familiar-schemas are picked up immediately.
familiar-schemas = { path = "../familiar-schemas/packages/familiar-schemas" }
