[package]
name = "familiar-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management crate for the Familiar platform - central authority for all magic numbers"

[dependencies]
# Configuration loading and merging
config = { version = "0.14", features = ["toml"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Environment variable support
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Duration parsing
humantime = "2.1"

# File system operations
directories = "5.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
