[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
familiar-schemas = { git = "https://github.com/phaiel/familiar-schemas.git", branch = "main" }
familiar-config = { path = "../familiar-config" }
cel-interpreter = "0.4"
walkdir = "2.4"
regex = "1.10"
jsonschema = "0.17"
petgraph = "0.6"
heck = "0.4"
