[package]
name = "familiar-router"
version = "0.1.0"
edition = "2021"
description = "Runtime routing logic for multi-node architecture with CEL evaluation"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# CEL evaluation
cel-interpreter = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema dependencies (embedded)
# Embed schemas at compile time (no runtime dependency on familiar-schemas)
include_dir = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Version handling
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
