[package]
name = "familiar-drift-internals"
version = "0.1.0"
edition = "2021"
description = "Drift checking logic for schema-first architecture - compares Rust structs to JSON schemas"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "1"





